[package]
name = "kv-store"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kv-cli"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prost = "0.13.5"
tonic = "0.13.0"
log = "0.4.27"
env_logger = "0.11.8"
rocksdb = "0.23.0"
rand = "0.9.1"
futures-util = "0.3.31"
openraft = { version = "0.9.18", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1.88"

[build-dependencies]
tonic-build = "0.13.0"
